--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "psr/simple-cache": "^1.0"
+        "psr/simple-cache": "^1.0",
+        "desarrolla2/cache": "^3.0"
     },
     "autoload": {
         "psr-4": {
