--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
         }
     ],
     "require": {
+        "php": "^7.1",
         "psr/simple-cache": "^1.0",
-        "desarrolla2/cache": "^3.0"
+        "desarrolla2/cache": "^3.0",
+        "guzzlehttp/guzzle": "^6.5"
     },
     "autoload": {
         "psr-4": {
