--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Brewal RENAULT",
-            "email": "brewal@sportrizer.com"
+            "name": "SportRIZER", 
+            "email": "contact@sportrizer.com"
         }
     ],
     "require": {
