--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
             "email": "contact@sportrizer.com"
         }
     ],
+    "scripts": {
+        "test": "phpunit"
+    },
     "require": {
         "php": "^7.1",
         "psr/simple-cache": "^1.0",
