--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "psr/simple-cache": "^1.0",
         "desarrolla2/cache": "^3.0",
         "guzzlehttp/guzzle": "^6.5",
-        "kevinrob/guzzle-cache-middleware": "^3.3",
+        "kevinrob/guzzle-cache-middleware": "^3.3"
+    },
+    "suggest": {
         "predis/predis": "^1.1",
         "laminas/laminas-httphandlerrunner": "^1.1"
     },
